# pixl-webui

./: .gitignore  AGENTS.md  README.md  install.ps1  start.bat  test-frontend.bat
backend/: AGENTS.md  pyproject.toml
backend/app/: __init__.py  catalog.py  config.py  device.py  engines_catalog.json  live.py  loras_catalog.json  main.py  messages.py  models_catalog.json  restore_presets.json  samplers.py
backend/app/routers/: AGENTS.md  __init__.py  compare.py  edit.py  generate.py  images.py  inpaint.py  loras.py  models.py  reframe.py  restore.py  settings.py  system.py  templates.py  upscale.py  ws.py
backend/app/services/: AGENTS.md  __init__.py  analysis.py  callbacks.py  custom_models.py  custom_upscalers.py  downloader.py  edit.py  fit.py  gallery.py  gpu_win.py  grid.py  hf_browse.py  inpaint.py  inpaint_engine.py  job_guard.py  jobs.py  loras.py  model_slots.py  optimizations.py  outpaint.py  pipeline.py  preview.py  prompt_embeds.py  prompt_templates.py  quantize.py  reframe.py  resources.py  restore_engine.py  upscale.py  upscalers.py  vram.py
backend/pixl_webui_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: technical-debt.md
docs/adr/: 0001-inference-engine-diffusers.md  0002-windows-gpu-install.md  0003-frontend-mui-emotion-i18n.md  0004-ai-upscaler.md  0005-websocket-live-updates.md  0006-upscale-reframe-outpaint.md  0007-queue-based-websocket-push.md  0008-gguf-quantized-flux.md  0009-inference-perf-tunableop-compile.md  0010-flux-outpaint-fill-gguf.md  0011-curated-only-json-catalogs.md  0012-user-mask-inpaint.md  0013-flux-kontext-edit.md  0014-single-job-guard.md  0015-lora-adapters-peft.md  0016-xyz-plot-compare.md  0017-xyz-plot-axis-ui-and-singles.md  0018-installer-fetch-rocm-module.md  0019-on-the-fly-quantization.md  0020-flux2-klein-dual-nf4.md  0021-civitai-download-source.md  0022-face-restoration.md  0023-model-slot-registry.md  0024-photo-restoration-mode.md
frontend/: .prettierignore  AGENTS.md  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/app/compare/: page.tsx
frontend/app/edit/: page.tsx
frontend/app/gallery/: page.tsx
frontend/app/generate/: page.tsx
frontend/app/inpaint/: page.tsx
frontend/app/models/: page.tsx
frontend/app/reframe/: page.tsx
frontend/app/restore/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/upscale/: page.tsx
frontend/e2e/: AGENTS.md  inspect.mjs
frontend/e2e/lib/: shared-browser.mjs
frontend/src/activity/: ActivityProvider.tsx  DownloadProvider.tsx
frontend/src/app-shell/: AppChrome.tsx
frontend/src/components/: AGENTS.md
frontend/src/components/atoms/: Logo.tsx  MonoText.tsx  SectionHeading.tsx
frontend/src/components/molecules/: ActivityBubble.tsx  AxisEditor.tsx  BeforeAfterSlider.tsx  BrushControls.tsx  CatalogEntryRow.tsx  ConfirmDialog.tsx  ConnectionStatus.tsx  DamageReport.tsx  FieldWithInfo.tsx  GalleryCard.tsx  GenerationParams.tsx  InfoTip.tsx  LabeledSlider.tsx  LoadingIndicator.tsx  ModelCard.tsx  ModelListItem.tsx  ModelSelect.tsx  NavDrawer.tsx  QuantSelect.tsx  ReframePreview.tsx  ResultPlaceholder.tsx  SectionHeadingWithInfo.tsx  SkeletonCardGrid.tsx  SkeletonList.tsx  SourceInfo.tsx  Thumbnail.tsx  UpscaleStats.tsx
frontend/src/components/organisms/: ActivityOverlay.tsx  AddEngineDialog.tsx  AddModelDialog.tsx  BatchImageResult.tsx  CatalogEditor.tsx  ComparePanel.tsx  CompareResult.tsx  CuratedEnginesEditor.tsx  CuratedLorasEditor.tsx  CuratedModelsEditor.tsx  EditPanel.tsx  EditResult.tsx  EngineManager.tsx  EnginePicker.tsx  GalleryPanel.tsx  GalleryPicker.tsx  GenerationForm.tsx  GenerationPanel.tsx  GenerationResult.tsx  InferenceOverlay.tsx  InpaintCanvas.tsx  InpaintPanel.tsx  InpaintResult.tsx  JobPanelShell.tsx  LoraPicker.tsx  ModelManager.tsx  PromptSnippetManager.tsx  PromptSnippets.tsx  ReferenceImage.tsx  ReframePanel.tsx  ReframeResult.tsx  RestorePanel.tsx  RestoreResult.tsx  SettingsPanel.tsx  SnippetPromptField.tsx  SourcePicker.tsx  SystemStatusBar.tsx  UpscalePanel.tsx  UpscaleResult.tsx
frontend/src/generation/: GenerationProvider.tsx
frontend/src/i18n/: index.tsx
frontend/src/i18n/locales/: en.json
frontend/src/lib/: AGENTS.md  api.ts  duration.ts  fit.ts  formCard.ts  formLock.ts  inpaint.ts  jobHooks.ts  jobPersistence.ts  modelFamily.ts  objectPath.ts  readFile.ts  reframe.ts  stats.ts  stickyActionBar.ts  useAsyncData.ts  useEngineCatalog.ts  useEngineSelection.ts  useImageRouteParams.ts  useImageSource.ts  useInpaintEngineSelection.ts  useJob.ts  useSamplers.ts  useSnippets.ts  ws.ts
frontend/src/locales/: en.json
frontend/src/providers/: AGENTS.md  ActivityProvider.tsx  AppDataProvider.tsx  ColorModeProvider.tsx  CompareProvider.tsx  DownloadProvider.tsx  EditProvider.tsx  GenerationProvider.tsx  InpaintProvider.tsx  ReframeProvider.tsx  RestoreProvider.tsx  UpscaleProvider.tsx
frontend/src/theme/: ColorModeProvider.tsx  theme.ts
frontend/src/types/: index.ts
frontend/src/upscale/: UpscaleProvider.tsx  stats.ts
