[project]
name = "pixl-webui-backend"
version = "0.1.0"
description = "FastAPI + diffusers inference backend for Pixl WebUI"
requires-python = ">=3.10,<3.14"

# NOTE: torch AND torchvision are intentionally NOT listed here. They are installed
# by install.ps1 with the GPU-specific index (CUDA for NVIDIA, ROCm for AMD) BEFORE
# this package, so that spandrel's torchvision requirement is already satisfied and
# pip does not pull a mismatched CPU/CUDA build from PyPI (which would break the GPU
# torch). torchvision is required by spandrel (the Real-ESRGAN upscaler).
# bitsandbytes is likewise NOT listed: it's platform-specific (CUDA wheel vs the
# community ROCm/Windows wheel) and installed by install.ps1. On-the-fly NF4/int8
# quantization (ADR 0019) is guarded by services.quantize.available() — absent bnb
# degrades to fp16-only.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "diffusers>=0.35",  # GGUF FLUX needs >=0.31; FluxKontextPipeline (edit) needs >=0.35
    "transformers>=4.40",
    "accelerate>=0.29",
    "safetensors>=0.4",
    "huggingface_hub>=0.23",
    "pillow>=10.0",
    "pydantic>=2.6",
    "psutil>=5.9",
    "spandrel>=0.3",  # loads Real-ESRGAN/ESRGAN .pth weights for AI upscaling
    "compel>=2.0",  # long-prompt (>77 CLIP tokens) + weighted embeddings for SD/SDXL
    "gguf>=0.10",  # load GGUF-quantized FLUX transformers via diffusers GGUFQuantizationConfig
    "peft>=0.11",  # PEFT backend diffusers requires for load_lora_weights/set_adapters (LoRA)
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.routers", "app.services"]
